Improve molaunch